--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -123,6 +123,11 @@
   margin-top: 20px;
 }
 
+.project-modals .modal-dialog {
+  max-width: 1150px;
+  margin-top: 130px;
+}
+
 @media (max-width: 992px) {
   .xl-text {
     font-size: 50px;
